--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,11 @@
 
   --color-muted-steel-blue: #94A3B8;
 }
-  body {
-    font-family: var(--font-plex-sans), system-ui, sans-serif;
+body {
+  font-family: var(--font-plex-sans), system-ui, sans-serif;
+}
+.carousel-container{
+  button{
+    border: 1px solid #6B0142;
   }
+}
