--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,7 +71,15 @@ body {
 @media (min-width: 1280px) {
   .carousel-container {
     .react-multiple-carousel__arrow{
+      position: absolute;
+      bottom: 0;
       display: block!important;
+      &.react-multiple-carousel__arrow--right{
+        transform: translateX(100%)!important;
+      }
+      react-multiple-carousel__arrow--left{
+        transform: translateX(100%)!important;
+      }
     }
   }
 }
